[tool.poetry]
name = "cloud_event_example"
version = "0.1.0"
description = ""
authors = ["ZacCarrico <z.carrico@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
mock = "^4.0.3"
numpy = "^1.23.2"
functions-framework = "^3.2.0"
matplotlib = "^3.5.3"
gluoncv = "^0.10.5"
mxnet = "^1.9.1"
google-cloud-storage = "^2.5.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
autopep8 = "^1.7.0"
black = "^22.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
